Crash using outliner editmode shortcuts for objects with linked data #81818

Closed
opened 2020-10-18 22:05:44 +02:00 by Hans Goudey · 8 comments
Member

System Information
Operating system: Linux-5.8.15-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, latest
Worked: The outliner didn't have this functionality before, so N/A

Short description of error
Using the buttons in the outliner to enter edit mode for objects sharing data results in a crash

Exact steps for others to reproduce the error
Windvane_crash.blend

  • Open the provided blend file
  • Enter edit mode for one of the two objects
  • Use the "dot" buttons in the outliner (ctrl-click) to enter edit mode for the other object as well
  • Crash
**System Information** Operating system: Linux-5.8.15-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, latest Worked: The outliner didn't have this functionality before, so N/A **Short description of error** Using the buttons in the outliner to enter edit mode for objects sharing data results in a crash **Exact steps for others to reproduce the error** [Windvane_crash.blend](https://archive.blender.org/developer/F9013533/Windvane_crash.blend) - Open the provided blend file - Enter edit mode for one of the two objects - Use the "dot" buttons in the outliner (`ctrl-click`) to enter edit mode for the other object as well - Crash
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

I suggest that we use a separate icon besides the "dot" in the mode column to indicate that object data is shared with the current edit mode data.

We could also just disable (gray out) the dot for those objects.

I suggest that we use a separate icon besides the "dot" in the mode column to indicate that object data is shared with the current edit mode data. We could also just disable (gray out) the dot for those objects.

Added subscriber: @mont29

Added subscriber: @mont29

Cannot confirm any crash here...

Cannot confirm any crash here...

Ah, now I can confirm indeed:

1  v3d_editvertex_buts                view3d_buttons.c 294  0x15f85059 
2  view3d_panel_transform             view3d_buttons.c 1616 0x15f97961 
3  ed_panel_draw                      area.c           2708 0x13ee7c80 
4  ED_region_panels_layout_ex         area.c           2902 0x13eea23a 
5  ED_view3d_buttons_region_layout_ex space_view3d.c   1363 0x15f71947 
6  view3d_buttons_region_layout       space_view3d.c   1368 0x15f719c9 
7  ED_region_do_layout                area.c           510  0x13ec5be9 
8  wm_draw_window_offscreen           wm_draw.c        684  0x11064a3d 
9  wm_draw_window                     wm_draw.c        872  0x11066346 
10 wm_draw_update                     wm_draw.c        1073 0x110677a1 
11 WM_main                            wm.c             482  0x110502de 
12 main                               creator.c        519  0xfd82e31  
Ah, now I can confirm indeed: ``` 1 v3d_editvertex_buts view3d_buttons.c 294 0x15f85059 2 view3d_panel_transform view3d_buttons.c 1616 0x15f97961 3 ed_panel_draw area.c 2708 0x13ee7c80 4 ED_region_panels_layout_ex area.c 2902 0x13eea23a 5 ED_view3d_buttons_region_layout_ex space_view3d.c 1363 0x15f71947 6 view3d_buttons_region_layout space_view3d.c 1368 0x15f719c9 7 ED_region_do_layout area.c 510 0x13ec5be9 8 wm_draw_window_offscreen wm_draw.c 684 0x11064a3d 9 wm_draw_window wm_draw.c 872 0x11066346 10 wm_draw_update wm_draw.c 1073 0x110677a1 11 WM_main wm.c 482 0x110502de 12 main creator.c 519 0xfd82e31 ```
Hans Goudey self-assigned this 2020-10-19 17:51:22 +02:00

This issue was referenced by 8e060b44da

This issue was referenced by 8e060b44da04f4385a36a1a441e2ec45f1fd19f2
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81818
No description provided.